# Web

./: README.md
1/: .babelrc  isbn.js  isbn.test.js  package-lock.json  package.json
2/: class.js  package-lock.json  package.json
C#/: Isbn10.cs  Isbn13.cs  Leven.cs  Program.cs
React/: LogsViewer.jsx  Parent.jsx  calc.js  calculator.jsx  package-lock.json  package.json  webpack.config.js
alien_invasion/: alien.py  alien_invasion.py  bullet.py  button.py  game_functions.py  game_stats.py  scoreboard.py  settings.py  ship.py
projectSOBES/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kek.xml  main.cpp  projectSOBES  projectSOBES.cbp
projectSOBES/serverSOBES/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  output  serverSOBES  serverSOBES.cbp
scripts/: ClassProp.js  ClassPropVal.js  Index.js  Leven.js  LevenRec.js  classISBN.js  isbn.js  isbn.test.js  isbn10.js  isbn13.js  package-lock.json  package.json
src/com/atm/atm/: ATM.java
src/com/atm/bank/: Bank.java
src/com/atm/card/: Card.java
src/com/atm/client/: Client.java
src/com/atm/encryptor/: Encryptor.java
testBeamSearch/: server.py  start.py  test.py
testsob/: main.py
